# quantclassic

./: .gitignore  ARCHITECTURE.md  README.md  agent.md  plan.md  pyproject.toml
.requirements/: REQ-001.md  REQ-002.md  REQ-003.md  REQ-004.md  REQ-005.md  REQ-006.md  REQ-007.md
backtest/: README.md  __init__.py  backtest_config.py  backtest_runner.py  backtest_system.py  benchmark_manager.py  benchmark_manager_backup.py  example_backtest.py  example_benchmark_usage.py  example_enhanced_visualization.py  factor_generator.py  factor_processor.py  general_backtest_adapter.py  ic_analyzer.py  multi_factor_backtest.py  notebook_integration_example.py  performance_evaluator.py  plan.md  portfolio_builder.py  prediction_adapter.py  result_visualizer.py  result_visualizer_plotly.py  test_benchmark_cache.py  test_visualization.py
config/: BEFORE_AFTER.md  QUICKSTART.md  README.md  RUN_GUIDE.md  __init__.py  base_config.py  cli.py  gnn_dynamic.yaml  loader.py  runner.py  utils.py
data_fetch/: __init__.py  clickhouse_fetcher.py  config.yaml  config_clickhouse.yaml  config_manager.py  daily_graph_loader.py  data_fetcher.py  data_processor.py  data_validator.py  example.py  example_clickhouse.py  field_mapper.py  pipeline.py  resume_manager.py  unified_data_source.py
data_monitor/: LEAKAGE_DETECTION_GUIDE.md  README.md  __init__.py  dynamic_leakage_detector.py  example_leakage_detection.py  leakage_detection_config.py  leakage_detector.py  static_leakage_detector.py
data_processor/: README.md  __init__.py  data_preprocessor.py  example_preprocess.py  feature_processor.py  graph_builder.py  label_generator.py  (+3 more)
(+191 files in other folders)
